# apertium-nio

./: AUTHORS  Makefile.am  NEWS  README.md  apertium-nio.nio.lexc  apertium-nio.nio.twol  apertium-nio.pc.in  apertium-nio.test-nio.yaml  autogen.sh  configure.ac  modes.xml
